--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -1,56 +1,57 @@
-name: Up Auto
+name: Auto Bet UP & INDRA
 
 on:
   workflow_dispatch:
 
 jobs:
-  run-hokii:
+  bet-up:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install playwright python-dotenv requests
           playwright install chromium
 
-      - name: Jalankan Bot 1
-        run: |
-          echo "Running main.py"
-          output=$(python main.py)
-          echo "$output"
-          if echo "$output" | grep -q "✅"; then
-            echo "✅ main.py sukses"
-          else
-            echo "❌ main.py gagal"
-          fi
-        continue-on-error: true
+      - name: Run script for UP
         env:
           userid: ${{ secrets.USERID }}
           pw: ${{ secrets.PW }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          MODE_SITE: up
+        run: |
+          python main.py
 
-      - name: Jalankan Bot 2
+  bet-indra:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
         run: |
-          echo "Running main2.py"
-          output=$(python main2.py)
-          echo "$output"
-          if echo "$output" | grep -q "✅"; then
-            echo "✅ main2.py sukses"
-          else
-            echo "❌ main2.py gagal"
-            exit 1
-          fi
+          pip install playwright python-dotenv requests
+          playwright install chromium
+
+      - name: Run script for INDRA
         env:
           userid: ${{ secrets.USERID }}
           pw: ${{ secrets.PW }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          MODE_SITE: indra
+        run: |
+          python main.py
