--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -17,8 +17,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install playwright python-dotenv requests
+          pip install -r requirements.txt
           playwright install chromium
+
 
       - name: Run script for UP
         env:
