--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -20,8 +20,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install playwright
+        pip install -r requirements.txt
         playwright install chromium
 
     - name: Run Python script
