--- a/.github/workflows/up.yml
+++ b/.github/workflows/up.yml
@@ -28,12 +28,12 @@ jobs:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
       run: python main.py
 
-    - name: Ambil waktu WIB
-      id: waktu_wib
+    - name: Set WIB time
+      id: set_wib_time
       run: |
-        # Ambil waktu Asia/Jakarta dari API worldtimeapi
-        WIB_TIME=$(curl -s 'http://worldtimeapi.org/api/timezone/Asia/Jakarta' | jq -r '.datetime' | cut -d'.' -f1 | sed 's/T/ /')
-        echo "waktu_wib=$WIB_TIME" >> "$GITHUB_OUTPUT"
+        # ambil waktu sekarang (UTC) lalu tambah 7 jam
+        TIME_WIB=$(date -u --date='+7 hours' '+%Y-%m-%d %H:%M:%S')
+        echo "time_wib=$TIME_WIB" >> $GITHUB_OUTPUT
 
     - name: Kirim Notifikasi Telegram (Success)
       if: success()
@@ -41,10 +41,10 @@ jobs:
         TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
       run: |
-        curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-        -d chat_id=${TELEGRAM_CHAT_ID} \
-        -d text="✅ Workflow *BERHASIL* pada ${{ steps.waktu_wib.outputs.waktu_wib }} WIB" \
-        -d parse_mode=Markdown
+        curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage" \
+          -d chat_id="${TELEGRAM_CHAT_ID}" \
+          -d text="✅ Workflow *BERHASIL* pada ${{ steps.set_wib_time.outputs.time_wib }} WIB" \
+          -d parse_mode="Markdown"
 
     - name: Kirim Notifikasi Telegram (Failed)
       if: failure()
@@ -52,7 +52,7 @@ jobs:
         TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
       run: |
-        curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-        -d chat_id=${TELEGRAM_CHAT_ID} \
-        -d text="❌ Workflow *GAGAL* pada ${{ steps.waktu_wib.outputs.waktu_wib }} WIB" \
-        -d parse_mode=Markdown
+        curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage" \
+          -d chat_id="${TELEGRAM_CHAT_ID}" \
+          -d text="❌ Workflow *GAGAL* pada ${{ steps.set_wib_time.outputs.time_wib }} WIB" \
+          -d parse_mode="Markdown"
