--- a/.github/workflows/saldo.yml
+++ b/.github/workflows/saldo.yml
@@ -1,24 +1,24 @@
 name: CEK SALDO
-
 on:
   workflow_dispatch:
 
 jobs:
-  build:
+  run:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Setup Python
+      uses: actions/setup-python@v5
       with:
-        python-version: 3.10
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
-        playwright install
+        pip install playwright requests python-dotenv
+        playwright install chromium
 
     - name: Run script
       run: python cek.py
