--- a/.github/workflows/saldo.yml
+++ b/.github/workflows/saldo.yml
@@ -24,4 +24,9 @@ jobs:
 
 
     - name: Run script
+      env:
+        pw: ${{ secrets.PW }}
+        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+
       run: python cek.py
